--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
+    <script>console.log("yo");</script>
     <script type="module">
-        import init from './target/wasm32-unknown-unknown/debug/bevy_dodge.wasm'
+        import init from './bevy_dodge.wasm'
         init()
     </script>
 </body>
